<resources>
    <string name="app_name">Odoo Follow Up</string>
    <string name="auth_type">com.odoo.followup.auth</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="invalid_url">Invalid URL</string>
    <string name="invalid_username_or_password">Invalid Username or Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="host_url">Host URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="error_username_required">Username Required</string>
    <string name="error_password_required">Password Required</string>
    <string name="refresh">Refresh</string>
    <string name="error_title_odoo_version">Unsupported Odoo Version</string>
    <string name="msg_unsupported_odoo_version">Odoo version you are using is not supported.</string>
    <string name="title_fail_account_create">Account Create fail</string>
    <string name="msg_unable_to_create_account">Unable to create device account. Please try again.</string>
    <string name="label_follow_up">Follow Up</string>
    <string name="label_app_data">App Data</string>
    <string name="label_contacts">Contacts</string>
    <string name="label_leads">Leads</string>
    <string name="title_new_contact">New Contact</string>
    <string name="title_missed_call_from_customer">Missed call from customer</string>
    <string name="label_callback">Callback</string>
    <string name="label_schedule">Schedule</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_sales">Sales</string>
    <string name="title_customers">Customers</string>
    <string name="title_pipeline">Pipeline</string>
    <string name="title_next_activity">Next Activity</string>
    <string name="title_products">Products</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_preferences">Preferences</string>
    <string name="getting_data">Getting data…</string>
    <string name="label_products">Products</string>
    <string name="title_refresh_data">Refresh Data</string>
    <string name="error_name_required">Customer Name Required</string>
    <string name="authority_res_partner">com.odoo.followup.contacts.sync</string>
    <string name="authority_app_data">com.odoo.followup.appdata.sync</string>
    <string name="authority_crm_lead">com.odoo.followup.leads.sync</string>
    <string name="authority_meetings">com.odoo.followup.meeting.sync</string>
    <string name="authority_product_template">com.odoo.followup.products.sync</string>
    <string name="crm_team_authority">com.odoo.followup.crmteam.sync</string>
    <string name="label_new_message">New Message</string>
    <string name="label_log_an_internal_note">Log an internal note</string>
    <string name="label_or">OR</string>
    <string name="label_send">Send</string>
    <string name="label_subject">Subject</string>
    <string name="label_message">Message</string>
    <string name="label_write_something">Write something...</string>
    <string name="error_put_some_input_for_message">Put some input for message</string>
    <string name="label_sending">Sending...</string>
    <string name="toast_message_sent">Message sent..</string>
    <string name="toast_not_able_to_send_message">Not able to send message. Try again later.</string>
    <string name="label_log">Log</string>
    <string name="label_logging">Logging...</string>
    <string name="toast_note_logged">Note logged</string>
    <string name="toast_not_able_to_log_note">Not able to log note</string>
    <string name="label_meetings">Meetings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_no_attachments">No attachments</string>
    <string name="label_add">Add</string>
    <string name="label_total_attachments">%d attachment(s)</string>
    <string name="toast_no_attachments_to_view">No attachments to view</string>
    <string name="label_loading_attachments">Loading attachments…</string>
    <string name="title_attachments">Attachments</string>
    <string name="label_select_file">Select File</string>
    <string name="label_uploading">Uploading...</string>
    <string name="label_another_upload_in_progress">Another upload in progress...</string>
    <string name="label_file_attached">File attached</string>
    <string name="label_file_not_attached">Something gone wrong. File not uploaded</string>
    <string name="title_confirm">Confirm</string>
    <string name="msg_are_you_sure_want_to_remove_attachment">Are you sure want to remove attachment ?</string>
    <string name="label_yes">Yes</string>
    <string name="label_CRMTeam">CRM Team</string>
    <string name="label_todo">Todo</string>
    <string name="label_performance">Performance</string>
    <string name="label_today">Today</string>
    <string name="label_next_activities">Next Activities</string>
    <string name="label_pipeline">Pipeline</string>
    <string name="label_next_7_days">Next 7 Days</string>
    <string name="label_this_month">This month</string>
    <string name="label_activities_done">Activities Done</string>
    <string name="label_won_in_opp">Won in Opp.</string>
    <string name="label_invoiced">Invoiced</string>
    <string name="label_target">Target</string>
    <string name="label_last_month">Last month</string>
    <string name="title_email">Email</string>
    <string name="title_customer">Customer</string>
    <string name="title_sales_team">Sales Team</string>
    <string name="title_rating">Rating</string>
    <string name="title_salesperson">Salesperson</string>
    <string name="title_expected_closing">Expected Closing</string>
    <string name="label_overlay_permission">Allow Device for Overlay Permission</string>
    <string name="label_caller_window">Allow Caller Window</string>
    <string name="label_details">Details</string>
</resources>
