<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/appbar_layout" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dim_16">

            <TextView
                android:id="@+id/textOppName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#dd000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textPlannedRevenue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:padding="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#aa000000" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:paddingBottom="2dp"
                    android:text=" at "
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/textProbability"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#aa000000" />

                <TextView
                    android:id="@+id/textStage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="#5CB85C"
                    android:padding="4dp"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="#FFFFFF" />
            </LinearLayout>

            <TextView
                android:id="@+id/label_customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_customer"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textCustomerName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <TextView
                android:id="@+id/label_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_email"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textCustomerEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_next_activity"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textNextActivity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bb000000" />

                <TextView
                    android:id="@+id/textDateAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bb000000" />
            </LinearLayout>

            <TextView
                android:id="@+id/textTitleAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#bb000000"
                android:visibility="gone" />

            <TextView
                android:id="@+id/label_deadlinr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_expected_closing"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textDateDeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#cc000000"
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_salesperson"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textSalesperson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/label_salesTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_sales_team"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textSalesTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#cc000000"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim_16"
                android:padding="2dp"
                android:text="@string/title_rating"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RatingBar
                android:id="@+id/oppRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:isIndicator="true"
                android:numStars="3"
                android:stepSize="1" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
