<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialogHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/recordName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:padding="@dimen/dim_16"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

    <View style="@style/ViewSeparator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/messageSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/label_subject"
                android:padding="@dimen/dim_16"
                android:textAppearance="?android:textAppearanceMedium" />

            <View style="@style/ViewSeparator" />

            <EditText
                android:id="@+id/messageBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:gravity="top"
                android:hint="@string/label_write_something"
                android:minLines="10"
                android:padding="@dimen/dim_16"
                android:textAppearance="?android:textAppearanceMedium">

                <requestFocus />
            </EditText>


        </LinearLayout>
    </ScrollView>

    <View style="@style/ViewSeparator" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/dividerVertical"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="@dimen/dim_16"
            android:text="@android:string/cancel"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000" />

        <Button
            android:id="@+id/btnSend"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:selectableItemBackground"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:padding="@dimen/dim_16"
            android:text="@string/label_send"
            android:textAllCaps="true"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>